Fix main page img hover alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -54,7 +54,7 @@ h2{
 /* main page link stuff */
 
 .list-a {
-    margin: 50px auto 0;
+    margin: 0 auto;
     max-width: 80vw;
     list-style: none;
     text-align: center;
@@ -66,6 +66,15 @@ h2{
     height: 150px;
     width: 150px;
     object-fit: cover;
+    margin: 50px auto 16px;
+}
+
+
+.list-a .food-image:hover {
+    height: 176px;
+    width: 176px;
+    margin-top: 34px;
+    margin-bottom: 6px;
 }
 
 li a {
